Fixed bug introduced by state refactoring
Answer buttons were not showing with new quizData state. Bug causes by square brackets around the questionAndAnswerData

--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -96,6 +96,7 @@ main{
 
 .quizAnswer-container{
   display: flex;
+  flex-wrap: wrap;
   
 }
 
